Background clipping fix

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@ body {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    background-image: url("assets/bg.jpg");
+    background: url("assets/bg.jpg") no-repeat;
+    background-size: cover;
 }
 
 particle-el {
